--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
           <li><strong>Área:</strong> 7.692.024 km²</li>
           <li><strong>Idioma oficial:</strong> Inglês</li>
           <li><strong>Moeda:</strong> Dólar australiano (AUD)</li>
+          <li><strong>Densidade demográfica:</strong> cerca de 3,6 habitantes por quilómetro quadrado</li>
+          <li><strong>Distribuição populacional:</strong> Grande parte do território australiano é desértica ou semiárida, o que dificulta a habitação humana, e a população tende a se concentrar nas regiões costeiras.</li>
         </ul>
         <h2>Natalidade e Mortalidade</h2>
         <ul>
